# genomatch-gillespie

./: .gitignore  README.md  core.py  environment.yml  main.py  methods.py  model.py  model.txt  modelmaker.py  params.yaml  pyproject.toml  requirements.txt  simulation.py
scratch/: gillespie-schema-generator-horizontal.py  gillespie-schema-generator-vertical.py  graph-maker.py
src/genomatchgp/: commands.py  main.py  methods.py  modelmaker.py  simulation.py
